--- a/index.html
+++ b/index.html
@@ -1,79 +1,36 @@
- <!DOCTYPE html>
- <html>
- <head>
-  <title>九九乘法口诀表</title>
- </head>
- <meta charset="utf-8">
- <body bgcolor="white">
- <h1 align="center" >
- <font color="purple red" face="华文楷体" size="10">乘法口诀表</font>
- </h1>
- <p>
- <table border="1" width="700" height="100" bgcolor="white" align="center">
- <tr bgcolor="red purple">
- <td>1*1=1</td>
- </tr>
- <tr bgcolor="purple">
- <td>1*2=2</td>
- <td>2*2=4</td>
- </tr>
- <tr bgcolor="purple green">
- <td>1*3=3</td>
- <td>2*3=6</td>
- <td>3*3=9</td>
- </tr>
- <tr bgcolor="white purple">
- <td>1*4=4</td>
- <td>2*4=8</td>
- <td>3*4=12</td>
- <td>4*4=16</td>
- </tr>
- <tr bgcolor="purple green">
- <td>1*5=5</td>
- <td>2*5=10</td>
- <td>3*5=15</td>
- <td>4*5=20</td>
- <td>5*5=25</td>
- </tr>
- <tr bgcolor="green purple">
- <td>1*6=6</td>
- <td>2*6=12</td>
- <td>3*6=18</td>
- <td>4*6=24</td>
- <td>5*6=30</td>
- <td>6*6=36</td>
- </tr>
- <tr bgcolor="black blue">
- <td>1*7=7</td>
- <td>2*7=14</td>
- <td>3*7=21</td>
- <td>4*7=28</td>
- <td>5*7=35</td>
- <td>6*7=42</td>
- <td>7*7=49</td>
- </tr>
- <tr bgcolor="blue black">
- <td>1*8=8</td>
- <td>2*8=16</td>
- <td>3*8=24</td>
- <td>4*8=32</td>
- <td>5*8=40</td>
- <td>6*8=48</td>
- <td>7*8=56</td>
- <td>8*8=64</td>
- </tr>
- <tr bgcolor="white blue">
- <td>1*9=9</td>
- <td>2*9=18</td>
- <td>3*9=27</td>
- <td>4*9=36</td>
- <td>5*9=45</td>
- <td>6*9=54</td>
- <td>7*9=63</td>
- <td>8*9=72</td>
- <td>9*9=81</td>
- </tr>
- </table>
- </p>
- </body>
- </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <pre>
+        <a href="#ch1">音乐1 Porlis</a>
+        <a href="#ch2">音乐2 -おやすみ、また明日</a>
+        <a href="#ch3">音乐3 我会呼唤你的名字 - 文豪野犬ED Namae wo Yobu yo</a>
+    </pre>
+    <h2 id="ch1">
+        <pre>
+            Porlis
+                Aisa D/JAMMERC
+                <a href="https://www.bilibili.com/video/BV1mQ4y1Q72y?from=search&seid=4469458037946571458&spm_id_from=333.337.0.0">链接</a>
+        </pre>
+    </h2>
+    <h2 id="ch2">
+        <pre>
+            -おやすみ、また明日（小林家的龙女仆）
+                伊藤真澄
+                <a href="https://www.bilibili.com/video/av243943922/">链接</a>
+        </pre> 
+    </h2>
+    <h2 id="ch3">
+        <pre>
+            我会呼唤你的名字 - 文豪野犬ED Namae wo Yobu yo
+                <a href="https://www.bilibili.com/video/BV1ps411P714?from=search&seid=16876566199766773086&spm_id_from=333.337.0.0">链接</a>
+        </pre>
+    </h2>
+    <a href="#">回到顶部</a>
+</html>
