--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,20 +17,20 @@
         <pre>
             Porlis
                 Aisa D/JAMMERC
-                <a href="https://www.bilibili.com/video/BV1mQ4y1Q72y?from=search&seid=4469458037946571458&spm_id_from=333.337.0.0">链接</a>
+                <a href="https://www.bilibili.com/video/BV1mQ4y1Q72y?from=search&seid=4469458037946571458&spm_id_from=333.337.0.0" target="_blank">链接</a>
         </pre>
     </h2>
     <h2 id="ch2">
         <pre>
             -おやすみ、また明日（小林家的龙女仆）
                 伊藤真澄
-                <a href="https://www.bilibili.com/video/av243943922/">链接</a>
+                <a href="https://www.bilibili.com/video/av243943922/" target="_blank">链接</a>
         </pre> 
     </h2>
     <h2 id="ch3">
         <pre>
             我会呼唤你的名字 - 文豪野犬ED Namae wo Yobu yo
-                <a href="https://www.bilibili.com/video/BV1ps411P714?from=search&seid=16876566199766773086&spm_id_from=333.337.0.0">链接</a>
+                <a href="https://www.bilibili.com/video/BV1ps411P714?from=search&seid=16876566199766773086&spm_id_from=333.337.0.0" target="_blank">链接</a>
         </pre>
     </h2>
     <a href="#">回到顶部</a>
