--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,6 +11,7 @@
         <a href="#ch1">音乐1 Porlis</a>
         <a href="#ch2">音乐2 -おやすみ、また明日</a>
         <a href="#ch3">音乐3 我会呼唤你的名字 - 文豪野犬ED Namae wo Yobu yo</a>
+        <a href="#ch4">音乐4 Sympathy (シンパシー)</a>
     </pre>
     <h2 id="ch1">
         <pre>
@@ -31,6 +31,13 @@
         <pre>
             我会呼唤你的名字 - 文豪野犬ED Namae wo Yobu yo
                 <a href="https://www.bilibili.com/video/BV1ps411P714?from=search&seid=16876566199766773086&spm_id_from=333.337.0.0" target="_blank">链接</a>
+        </pre>
+    </h2>
+    <h2 id="ch4">
+        <pre>
+            Sympathy (シンパシー)
+                Kitri
+                <a href="https://www.bilibili.com/video/BV1JR4y1H7GD/?spm_id_from=333.788.recommend_more_video.4" target="_blank">链接</a>
         </pre>
     </h2>
     <a href="#">回到顶部</a>
