--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <a href="music.html">音乐</a>
-    <a href="./begin/笔记.md">文件begin</a>
+    <a href="./begin/index1.html">文件begin</a>
 </body>
 </html>
