--- a/music/ch1-ch5.html
+++ b/music/ch1-ch5.html
@@ -65,5 +65,6 @@
                                         <a href="#">回到顶部</a>
         </pre>
     </h2>
+    <a href="./index_music.html">首页</a>
 </body>
 </html>
