--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <pre>
-        <h1><a href="./music/index_music.html">音乐集</a></h1> 
+<!--         <h1><a href="./music/index_music.html">音乐集</a></h1>  -->
         <h1><a href="">空</a></h1>
         <h1><a href="">空空</a></h1>
         <h1><a href="">空空空</a></h1>
